hw3/deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: http-server-service
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: http-server
