hw3/deploy/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-server-ingress
  annotations:
    kubernetes.io/ingress.allow-http: 'false'
spec:
  tls:
    - hosts:
        - naturegong.com
      secretName: http-server-tls-secret
  rules:
    - host: naturegong.com
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: http-server-service
                port:
                  number: 8080
